--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "firebase": "^9.0.0-beta.1",
+    "@firebase/app": "^0.6.20",
+    "firebase": "^8.4.3",
     "firebase-admin": "^9.7.0",
+    "firebase-tools": "^9.10.0",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
