--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.6.0",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.3.0",
     "@firebase/app": "^0.6.20",
+    "@fontsource/inter": "^4.2.2",
     "firebase": "^8.4.3",
     "firebase-admin": "^9.7.0",
     "firebase-tools": "^9.10.0",
+    "framer-motion": "^4.1.11",
     "gray-matter": "^4.0.3",
     "next": "10.2.0",
     "nookies": "^2.5.2",
